@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xtrs-4.9d-r51 (12 Apr 2014)
+
+  12 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r50.ebuild,
+  +xtrs-4.9d-r51.ebuild:
+  Add missing dependency on app-arch/unzip. Fix LS-DOS date bug.
+
   12 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r50.ebuild,
   metadata.xml:
   Rename ldos USE flag to ls-dos.
